# cpp-samples

./: CMakeLists.txt  README.md
c_library/: CMakeLists.txt  sample.c  sample.h
dll_sample/: CMakeLists.txt  sample_dll.cc  sample_dll.h
pimpl/: CMakeLists.txt
pimpl/private/: controller.cc  facade.cc  repository.cc  service.cc
pimpl/public/: controller.h  facade.h  repository.h  service.h  util_macros.h
src/: Formula.h  a_star.h  algorithm.cc  binary_literal.cc  custom_hash_sample.h  finite_state_machine.cc  ggpo_samples.cc  iterator_category.cc  main.cpp  non_obvious_nums.h  perfect_forwarding.cc  ref_annotation.h  sfinae.cc  stun.cpp  wrapper.cc
src/algorithm/: backtracking.cc  binary_search.cc  bit_manipulation.cc  floating_problem.cc  heap.cc  math.h  monotonic_stack.cc  sorting.cc
src/concurrency/: barrier.cc  call_once.cc  chrono.cc  execution_service.cc  future_sample.cc  hello_world.cc  hierarchical_mutex.cc  packaged_task_sample.cc  sort.cc
src/cpp_features/: attributes.h  common.cc  common.h  concepts.h  control_polymorphism.h  cow.h  crtp.h  exception_safety.cc  exception_safety.h  explicit_conversion.h  fold.h  lock_free.h  oop.h  operators.h  overloading.h  raii.h  ranges.h  separate_duplicate_methods.h  spaceship.h  static_polymorphism.h  string.h  structured_binding.h  template_auto.h  virtual.h
src/leetcode/: 01_matrix.cc  132_pattern.cc  aaa_empty.cc  add_binary.cc  add_digits.cc  add_to_array_form_of_integer.cc  add_two_numbers_ii.cc  advantage_shuffle.cc  all_nodes_distance_k_in_binary_tree.cc  all_paths_from_source_to_target.cc  all_possible_full_binary_trees.cc  as_far_from_land_as_possible.cc  asteroid_collision.cc  average_salary_excluding_the_minimum_and_maximum_salary.cc  backspace_string_compare.cc  basic_calculator.cc  best_team_with_no_conflicts.cc  best_time_to_buy_and_sell_stock.cc  best_time_to_buy_and_sell_stock_with_cooldown.cc  best_time_to_buy_and_sell_stock_with_transaction_fee.cc  binary_search.cc  binary_tree_level_order_traversal.cc  binary_tree_maximum_path_sum.cc  binary_tree_paths.cc  binary_tree_preorder_traversal.cc  binary_tree_zigzag_level_order_traversal.cc  boats_to_save_people.cc  buddy_strings.cc  build_array_where_you_can_find_the_maximum_exactly_k_comparisons.cc  bulb_switcher.cc  can_make_arithmetic_progression_from_sequence.cc  can_make_palindrome_from_substring.cc  can_place_flowers.cc  candy.cc  capacity_to_ship_packages_within_d_days.cc  champagne_tower.cc  cheapest_flights_within_k_stops.cc  check_completeness_of_a_binary_tree.cc  check_if_it_is_a_straight_line.cc  check_if_there_is_a_valid_partition_for_the_array.cc  (+351 more)
src/ref/: socket.cpp
src/snake_game_sample/: game_state.cc  game_state.h  ggpo_samples.h  grid_cell.cc
src/socket/: exception.h  socket.cc  tcp_client.cc  tcp_server.cc  udp_client.cc  udp_server.cc
src/stun/: exception.h  packet.h  stun_client.cc  stun_client.h
src/template/: a.cc  a.h
src/util/: log.h  tree_printer.cc  tree_printer.h
template_lib/: CMakeLists.txt  templates.cc  templates.h
tst/: 01_matrix.cc  132_pattern.cc  aaa_empty.cc  add_binary.cc  add_digits.cc  add_to_array_form_of_integer.cc  add_two_numbers_ii.cc  advantage_shuffle.cc  all_nodes_distance_k_in_binary_tree.cc  all_paths_from_source_to_target.cc  all_possible_full_binary_trees.cc  as_far_from_land_as_possible.cc  asteroid_collision.cc  average_salary_excluding_the_minimum_and_maximum_salary.cc  backspace_string_compare.cc  basic_calculator.cc  best_team_with_no_conflicts.cc  best_time_to_buy_and_sell_stock.cc  best_time_to_buy_and_sell_stock_with_cooldown.cc  best_time_to_buy_and_sell_stock_with_transaction_fee.cc  binary_search.cc  binary_tree_level_order_traversal.cc  binary_tree_maximum_path_sum.cc  binary_tree_paths.cc  binary_tree_preorder_traversal.cc  binary_tree_zigzag_level_order_traversal.cc  boats_to_save_people.cc  buddy_strings.cc  build_array_where_you_can_find_the_maximum_exactly_k_comparisons.cc  bulb_switcher.cc  can_make_arithmetic_progression_from_sequence.cc  can_make_palindrome_from_substring.cc  can_place_flowers.cc  candy.cc  capacity_to_ship_packages_within_d_days.cc  champagne_tower.cc  cheapest_flights_within_k_stops.cc  check_completeness_of_a_binary_tree.cc  check_if_it_is_a_straight_line.cc  check_if_there_is_a_valid_partition_for_the_array.cc  (+352 more)
